--- a/Horário de atendimento.html
+++ b/Horário de atendimento.html
@@ -31,7 +31,7 @@
                 <br>
                 <br>
                 <br>
-               <table border="1">
+               <table border="1" align="center" sumary="Tabele descritiva dos valores dos serviços prestados na Clínica.">
                 <tr>
                     <th>Serviços</th>
                     <th>Segunda a Sexta</th>
